--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,9 @@
 {% extends "bootstrap.html" %}
 {% block content %}
   <h1>Вход</h1>
-    <form action="/auth">
+    <form action="/auth" method="post">
         <input type="text" name="login" id="login_input" placeholder="Логин">
         <input type="password" name="password"  id="password_input" placeholder="Пароль">
-        <input type="submit" >
-
+        <input type="submit" class="btn btn-primary">
     </form>
 {% endblock %}
