--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -12,6 +12,18 @@
   </head>
   <body>
   <div id="container">
+  
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+  
+  
   {% block content %}
   <h1>Hello, world!</h1>
   {% endblock %}
